--- a/account/index.html
+++ b/account/index.html
@@ -60,9 +60,8 @@
   <div class="wrapper">
     <div class="sidebar" data-color="purple" data-background-color="white" data-image="../assets/img/sidebar-3.jpg">
       <div class="logo">
-        <a href="./" class="simple-text logo-mini" style="padding: 0.5rem; white-space: inherit;" id="logoName" name="param-link">
-			    <!-- <img src="../assets/img/golearn-school-logo.svg" style="width: 200px; height: auto;" alt=""></img> -->
-        </a>
+        <!-- <img src="https://org.golearn.com.my/assets/img/empty-photo.png" style="width: 260px; height: 100px; object-fit: cover; display: none;" name="cover-img-url"></img> -->
+        <a href="./" class="simple-text logo-mini" style="padding: 0.5rem; white-space: inherit;  width: 100%" id="logoName" name="param-link"></a>
       </div>
       <div class="sidebar-wrapper">
         <ul class="nav">
