--- a/account/settings/index.html
+++ b/account/settings/index.html
@@ -170,8 +170,7 @@
   <div class="wrapper">
     <div class="sidebar" data-color="purple" data-background-color="white" data-image="../../assets/img/sidebar-3.jpg">
       <div class="logo">
-        <a href="../" class="simple-text logo-mini" style="padding: 0.5rem" id="logoName" name="param-link">
-        </a>
+        <a href="../" class="simple-text logo-mini" style="padding: 0.5rem" id="logoName" name="param-link"></a>
       </div>
       <div class="sidebar-wrapper">
         <ul class="nav" style="margin-bottom: 50px;">
