Bug: Minor bug fixed in few files

--- a/account/class/add-class.html
+++ b/account/class/add-class.html
@@ -1234,6 +1234,7 @@
         [CLASS_SUBJECT_ID_KEY]: subjectId,
         [CLASS_ONLINE_KEY]: document.getElementById("onlineonly_check").checked,
         [CLASS_STUDENT_LIMIT]: document.getElementById("inStudentLimit").value,
+        [CLASS_FIRST_CLASS_DATE]: new Date(),
         [CLASS_ANNOUNCEMENT]: '',
         [CLASS_CLASS_URL]: document.getElementById("inUrlClass").value,
         [CLASS_CHAT_GROUP_URL]: document.getElementById("inUrlGroup").value,
