--- a/account/class/index.html
+++ b/account/class/index.html
@@ -1200,7 +1200,7 @@
           // [CLASS_DATE_ADD]: '',
           [CLASS_DATE_EDIT]: new Date(),
           // [CLASS_DATE_DEL]: '',
-          [CLASS_EDIT_MSG]: 'New announcement from '+ current_name, // Update: CLASS_DATE_EDIT + CLASS_EDIT_MSG
+          [CLASS_EDIT_MSG]: 'New announcement from '+ role_empName, // Update: CLASS_DATE_EDIT + CLASS_EDIT_MSG
         }
         // Set data
         db.collection("dev")
