--- a/account/teacher/index.html
+++ b/account/teacher/index.html
@@ -651,7 +651,7 @@
 
       // Update Add Teacher Registration Link
       let uriAdminId = encodeURIComponent(ent_id);
-      document.getElementById("inAutoJoinLink").value = 'https://org.golearn.com.my/school/tutor-registration.html?aid='+uriAdminId;
+      document.getElementById("inAutoJoinLink").value = 'https://org.golearn.com.my/tutor-registration.html?aid='+uriAdminId;
     }
 
     // Tutor Specific
