add account status to each new account

--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
             [ORG_ORG_RATING] : 0,
             [ORG_ORG_RATING_TIMES]  : 0,
             [ORG_ORG_RATING_FINAL] : 0,
-            [ORG_ORG_STATUS]  : "",
+            [ORG_ORG_STATUS]  : org_accountStatus,
             [ORG_ORG_NAME] : name,
             [ORG_ORG_PHONE]  : "",
             [ORG_ORG_EMAIL] : "",
