Bug: Correct student enrolment link

--- a/account/student/index.html
+++ b/account/student/index.html
@@ -506,7 +506,7 @@
 
       // Update registration link
       let uriAdminId = encodeURIComponent(ent_id);
-      document.getElementById("inAutoJoinLink").value = 'https://org.golearn.com.my/client/online-registration.html?aid='+uriAdminId;
+      document.getElementById("inAutoJoinLink").value = 'https://org.golearn.com.my/online-registration.html?aid='+uriAdminId;
     }
 
     //---------- Load all details ----------//
