--- a/online-registration.html
+++ b/online-registration.html
@@ -1284,11 +1284,7 @@
             }
 
           }
-          else
-          {
-
-          }
-            // window.location = './edit-dependant.html';
+          else{}
 
         });
 
