--- a/account/class/index.html
+++ b/account/class/index.html
@@ -525,7 +525,7 @@
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" data-dismiss="modal" id="btnEditClassModalUpdate">Update</button>
+                <button type="button" class="btn btn-primary hidden" data-dismiss="modal" id="btnEditClassModalUpdate" perm="teach-class-edit">Update</button>
               </div>
             </div>
           </div>
@@ -825,7 +825,7 @@
         }
 
         // Store actual class num in obj
-        sessionStorage.setItem(SESSION_STORAGE_CLASS_NUM_KEY, adminClassNum);
+        // sessionStorage.setItem(SESSION_STORAGE_CLASS_NUM_KEY, adminClassNum);
 
         // Load more handling
         latestClassDoc = querySnapshot.docs[querySnapshot.size - 1];
@@ -1209,7 +1209,7 @@
           .doc(ID)
           .set(docData, {merge: true})
           .then(() => {
-            window.location = './';
+            window.location.reload()
           })
           .catch((error) => {
               console.error("Error writing document: ", error);
@@ -1258,36 +1258,6 @@
 
   <!-- More functions -->
   <script>
-	  function editClassFunction2(elem){
-      // Get attribute and
-      if (JSON.parse(sessionStorage.getItem(SESSION_STORAGE_CLASS_ALL_DOCS_KEY)) == null ){
-        console.log("Error: Impossible to reach this state");
-        // Because this func only trigger when there's active class loaded
-        return;
-      }else{
-
-        let classObj = null;
-        let allClassList = null;
-
-        // Set the fields
-        allClassList = JSON.parse(sessionStorage.getItem(SESSION_STORAGE_CLASS_ALL_DOCS_KEY));
-        // allClassList = classObj[SESSION_STORAGE_ALL_DOCS_KEY];
-        allClassList.forEach((item) => {
-          if (item[CLASS_ID] === elem.getAttribute('data-id')){
-            sessionStorage.setItem(SESSION_STORAGE_CLASS_CURRENT_DOC_KEY, JSON.stringify(item));
-            sessionStorage.setItem(SESSION_STORAGE_CLASS_LOAD_KEY, true);
-            // If tutor is the admin of the class, set to True
-            sessionStorage.setItem(SESSION_STORAGE_CLASS_NON_ADMIN_KEY, (item[CLASS_ADMIN_ID] === ent_id) ? false : true);
-
-          }
-          // window.location = './edit-class.html?id='+elem.getAttribute('data-id');
-          window.location = './edit-class.html';
-
-          // console.log(item);
-        });
-
-      }
-		}
 
     function editClassFunction(elem){
       window.location.href = './edit-class.html' + "?url=" + orgUrl  +  "&ent=" + orgEnt + "&cid=" + elem.getAttribute('data-id')
