Update Registration complete redirection

--- a/online-registration.html
+++ b/online-registration.html
@@ -238,7 +238,7 @@
             <div class="col-md-12" id="registration-complete-screen" style="display: none; padding-left: 0; padding-right: 0;">
               <h2>You have completed your registration!</h2>
               <p>You will see your class after the class owner approves your enrollment. </p>
-              <a href="./" class="btn btn-outline-primary btn-round" id="btnBack">Go to my profile <i class="material-icons" style="color: #2e74b6; margin-right: 0.5em;">east</i></a>
+              <a href="https://app.golearn.com.my/client/" class="btn btn-outline-primary btn-round" id="btnBack">Go to my profile <i class="material-icons" style="color: #2e74b6; margin-right: 0.5em;">east</i></a>
 
             </div>
 
