--- a/tutor-registration.html
+++ b/tutor-registration.html
@@ -211,10 +211,10 @@
               <p id="invalidScreenDescription">Please contact the owner to fix this for you.</p>
             </div>
 
-            <!-- Invalid screen -->
+            <!-- Registration Complete screen -->
             <div class="col-md-9" id="registration-complete-screen" style="display: none;">
               <h2>You have completed your registration!</h2>
-              <a href="./" class="btn btn-outline-primary btn-round" id="btnBack">View my profile <i class="material-icons" style="color: #2e74b6; margin-right: 0.5em; padding-bottom: 0.2em;">east</i></a>
+              <a href="https://app.golearn.com.my/school/" class="btn btn-outline-primary btn-round" id="btnBack">View my profile <i class="material-icons" style="color: #2e74b6; margin-right: 0.5em; padding-bottom: 0.2em;">east</i></a>
 
             </div>
 
@@ -721,8 +721,8 @@
       })
       .then(() => {
 
-        console.log(currentTeacherNum)
-        console.log(ent_accountStatus)
+        // console.log(currentTeacherNum)
+        // console.log(ent_accountStatus)
 
           // Check admin account status
          if (ent_accountStatus === PREMIUM_ACCOUNT_2_STATUS_KEY || ent_accountStatus === PREMIUM_ACCOUNT_2_ACTIVE_STATUS_KEY){
