--- a/account/invoice/checker.html
+++ b/account/invoice/checker.html
@@ -920,8 +920,7 @@
 
         cell1.innerHTML = invRNameArr[index];
         cell2.innerHTML = rid;
-        // https://org.golearn.com.my/c/f/view.html?iid=McxIlEuCz0yCmV92vaTT
-        let invUrl = 'https://org.golearn.com.my/c/f/view.html?iid=' + invIdArr[index]
+        let invUrl = 'https://app.golearn.com.my/c/f/view.html?iid=' + invIdArr[index]
         let invUrl_a = document.createElement('a');
         invUrl_a.href = invUrl;
         invUrl_a.textContent = invRefNoArr[index];
@@ -961,8 +960,7 @@
 
         cell1.innerHTML = invRNameArr[index];
         cell2.innerHTML = invRIdArr[index];
-        // https://org.golearn.com.my/c/f/view.html?iid=McxIlEuCz0yCmV92vaTT
-        let invUrl = 'https://org.golearn.com.my/c/f/view.html?iid=' + invIdArr[index]
+        let invUrl = 'https://app.golearn.com.my/c/f/view.html?iid=' + invIdArr[index]
         let invUrl_a = document.createElement('a');
         invUrl_a.href = invUrl;
         invUrl_a.textContent = invRefNoArr[index];
@@ -1073,8 +1071,7 @@
 
         cell1.innerHTML = invRNameArr[index];
         cell2.innerHTML = rid;
-        // https://org.golearn.com.my/c/f/view.html?iid=McxIlEuCz0yCmV92vaTT
-        let invUrl = 'https://org.golearn.com.my/c/f/view.html?iid=' + invIdArr[index]
+        let invUrl = 'https://app.golearn.com.my/c/f/view.html?iid=' + invIdArr[index]
         let invUrl_a = document.createElement('a');
         invUrl_a.href = invUrl;
         invUrl_a.textContent = invRefNoArr[index];
@@ -1114,8 +1111,7 @@
 
         cell1.innerHTML = invRNameArr[index];
         cell2.innerHTML = invRIdArr[index];
-        // https://org.golearn.com.my/c/f/view.html?iid=McxIlEuCz0yCmV92vaTT
-        let invUrl = 'https://org.golearn.com.my/c/f/view.html?iid=' + invIdArr[index]
+        let invUrl = 'https://app.golearn.com.my/c/f/view.html?iid=' + invIdArr[index]
         let invUrl_a = document.createElement('a');
         invUrl_a.href = invUrl;
         invUrl_a.textContent = invRefNoArr[index];
