--- a/account/invoice/view.html
+++ b/account/invoice/view.html
@@ -1397,7 +1397,7 @@
       let line1 = "Hi "+ invObj[INV_RECEIVER_NAME]+ ", ";
       let line2 = "\nHere's the invoice for the tuition fee this month. Click on the link below to view. ";
       // let line5 = "\nYou are welcome to download a copy as your reference.";
-      let line3 = "\nhttps://org.golearn.com.my/c/f/view.html?iid="+invObj[INV_ID]+ " ";
+      let line3 = "\nhttps://app.golearn.com.my/c/f/view.html?iid="+invObj[INV_ID]+ " ";
       let line4 = "\nAmount: "+invAmount;
       let line5 = "\nDue Date: "+dueDate;
       let line6 = "\nThank you! ";
@@ -1406,7 +1406,7 @@
       document.getElementById("inPredefinedMessage").innerHTML = finalline ;
 
       // Download as PDF (The original download function do not work on mobile view. There will be a huge empty section on top)
-      btnDownloadAsPDF.setAttribute("href", "https://org.golearn.com.my/c/f/view.html?iid="+invObj[INV_ID]);
+      btnDownloadAsPDF.setAttribute("href", "https://app.golearn.com.my/c/f/view.html?iid="+invObj[INV_ID]);
       btnDownloadAsPDF.setAttribute("target", "blank");
     }
 
