Hide unused stuff

--- a/account/index.html
+++ b/account/index.html
@@ -343,7 +343,7 @@
             </div>
 
             <!-- Profile -->
-            <div class="col-md-3">
+            <div class="col-md-3 d-none">
               <div class="card card-stats">
                 <div class="card-header card-header-info card-header-icon">
                   <div class="card-icon">
@@ -377,7 +377,7 @@
             </div>
 
             <!-- Profile view -->
-            <div class="col-md-3" style="display: none;">
+            <div class="col-md-3 d-none">
               <div class="card card-stats">
                 <div class="card-header card-header-success card-header-icon">
                   <div class="card-icon">
@@ -403,7 +403,7 @@
               </div>
             </div>
             <!-- Public Courses -->
-            <div class="col-md-3" style="display: none;">
+            <div class="col-md-3 d-none">
               <div class="card card-stats">
                 <div class="card-header card-header-secondary card-header-icon">
                   <div class="card-icon">
@@ -461,7 +461,7 @@
             </div>
 
             <!-- User info -->
-            <div class="col-md-6">
+            <div class="col-md-6 d-none">
               <div class="row">
                 <div class="col-md-12">
                   <div class="card" style="margin-top: 0rem; ">
