--- a/account/settings/index.html
+++ b/account/settings/index.html
@@ -1722,6 +1722,8 @@
       coverImgUrlEnt.setAttribute('style', `background: url("`+ent_coverImgUrl+`"); background-repeat: no-repeat; background-size: 100%; background-position: center center;`)
 
       // Init area / state
+      console.log(ent_areaId, ent_stateId)
+
       initAreaState(ent_areaId, ent_stateId);
 
       //------ Description -------------//
